--- a/Kiwipedia2.0/Views/Shared/_Layout.cshtml
+++ b/Kiwipedia2.0/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Articole", "Index", "Article")</li>
+                    <li><a href="/Article/Index">Articole</a></li>
                     <li>@Html.ActionLink("Despre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
