--- a/Kiwipedia2.0/Views/Article/Edit.cshtml
+++ b/Kiwipedia2.0/Views/Article/Edit.cshtml
@@ -3,19 +3,18 @@
     ViewBag.Title = "Editare articol";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Editeaza articolul</h2>
 <form method="post" action="/Article/Edit/@ViewBag.id" style="width: 80%">
     @Html.HttpMethodOverride(HttpVerbs.Put)
     <br />
-    <h4>Titlu:</h4>
+    <h4>Titlu</h4>
     <textarea name="title" style="max-width: 30%; width:30%">@ViewBag.article.currentVersionId.title</textarea>
     <br />
-    <h4>Descriere:</h4>
+    <h4>Descriere</h4>
     <textarea name="description" style="max-width: 80%; width:80%">@ViewBag.article.currentVersionId.description</textarea>
     <br />
-    <h4>Continut:</h4>
+    <h4>Continut</h4>
     <textarea name="content" style="max-width: 80%; width:80%; height: 800px">@ViewBag.article.currentVersionId.content</textarea>
-    <br />
     <br />
     <button type="submit" class="btn btn-success">Modifica articolul</button>
     <a class="btn btn-danger" href="/Article/Index" role="button" style="margin-left: 10%">Anulare</a>
