--- a/Kiwipedia2.0/Views/Article/Index.cshtml
+++ b/Kiwipedia2.0/Views/Article/Index.cshtml
@@ -12,13 +12,13 @@
 {
     <h1>@article.currentVersionId.title</h1>
 
-    <h3>Descriere</h3>
     <img src=@article.currentVersionId.thumbnail width="100" style="float: left;"/>
     <p>@article.currentVersionId.description</p>
 
-    <small>Data creare: @article.created</small>
+    <small>Data creare: @article.creationDate</small>
     <br />
-    <small>Ultima actualizare: @article.currentVersionId.created.ToString()</small>
+    <small>Ultima actualizare: @article.currentVersionId.creationDate.ToString()</small>
+    <br />
     <br />
     <form method="post" action="/Article/Delete/@article.id">
         @Html.HttpMethodOverride(HttpVerbs.Delete)
