--- a/Kiwipedia2.0/Views/Article/New.cshtml
+++ b/Kiwipedia2.0/Views/Article/New.cshtml
@@ -1,25 +1,25 @@
 ﻿
 @{
-    ViewBag.Title = "New";
+    ViewBag.Title = "Adauga un articol";
 }
 
-<h2>Creare articol</h2>
-<p>Afisare formular de adaugare student</p>
+<h2>Adauga un articol nou</h2>
 <form method="post" action="/Article/New">
     <br />
-    <h4>Titlu:</h4>
+    <h4>Titlu</h4>
     <textarea name="title" style="max-width: 30%; width:30%"></textarea>
     <br />
-    <h4>Imagine principala:</h4>
-    <textarea name="title" style="max-width: 30%; width:30%"></textarea> <button class="btn btn-primary">Browse</button>
+    <h4>Imagine</h4>
+    <textarea name="title" style="max-width: 30%; width:30%"></textarea> 
+    <button class="btn btn-primary"> Browse </button>
     <br />
-    <h4>Descriere:</h4>
+    <h4>Descriere</h4>
     <textarea name="description" style="max-width: 80%; width:80%"></textarea>
     <br />
-    <h4>Continut:</h4>
-    <textarea name="content" style="max-width: 80%; width:80%; height: 800px"></textarea>
+    <h4>Continut</h4>
+    <textarea name="content" style="max-width: 80%; width:80%; height: 600px"></textarea>
     <br />
-    <button type="submit" class="btn btn-primary">Adauga articol</button>
+    <button type="submit" class="btn btn-primary">Adauga</button>
     <a class="btn btn-danger" href="/Article/Index" role="button" style="margin-left: 10%">Anulare</a>
 </form>
 <br />
