stii tu, satanciule, cu s mic

--- a/Kiwipedia2.0/Views/Article/New.cshtml
+++ b/Kiwipedia2.0/Views/Article/New.cshtml
@@ -9,9 +9,12 @@
     <h4>Titlu</h4>
     <textarea name="title" style="max-width: 30%; width:30%"></textarea>
     <br />
+    <h4>Categorie</h4>
+    <textarea name="category" style="max-width: 30%; width:30%"></textarea>
+    <br />
     <h4>Imagine</h4>
-    <textarea name="title" style="max-width: 30%; width:30%"></textarea> 
-    <button class="btn btn-primary"> Browse </button>
+    <textarea name="thumbnail" style="max-width: 30%; width:30%"></textarea>
+    <button class="btn btn-primary" type="button"> Browse </button>
     <br />
     <h4>Descriere</h4>
     <textarea name="description" style="max-width: 80%; width:80%"></textarea>
