--- a/Kiwipedia2.0/Views/Article/Index.cshtml
+++ b/Kiwipedia2.0/Views/Article/Index.cshtml
@@ -43,13 +43,13 @@
 
 @foreach (var article in ViewBag.articles)
 {
-    <h1>@article.currentVersionId.title</h1>
-    <img src=@article.currentVersionId.thumbnail width="100" style="float: left;"/>
-    <p>@article.currentVersionId.description</p>
+    <h1>@article.title</h1>
+    <img src=@article.thumbnail width="100" style="float: left;" />
+    <p>@article.description</p>
 
-    <small>Data creare: @article.creationDate</small>
+    <small>Data creare: @article.creationDate.ToString()</small>
     <br />
-    <small>Ultima actualizare: @article.currentVersionId.creationDate.ToString()</small>
+    <small>Ultima actualizare: @article.latestUpdate.ToString()</small>
     <br />
     <br />
     <form method="post" action="/Article/Delete/@article.id">
