--- a/Kiwipedia2.0/Views/Article/Show.cshtml
+++ b/Kiwipedia2.0/Views/Article/Show.cshtml
@@ -2,8 +2,8 @@
     ViewBag.Title = "Show";
 }
 
-<h1>@ViewBag.article.currentVersionId.title</h1>
-<p>@ViewBag.article.currentVersionId.content</p>
+<h1>@ViewBag.article.title</h1>
+<p>@ViewBag.article.content</p>
 
 <br />
 <a class="btn btn-primary" href="/Article/Index" role="button">Inapoi la articole</a>
