--- a/Kiwipedia2.0/Views/Article/Index.cshtml
+++ b/Kiwipedia2.0/Views/Article/Index.cshtml
@@ -13,10 +13,10 @@
             <div class="dropdown-menu">
                 <a class="dropdown-item" style="color: black;" href="/Article/Index">Toate categoriile</a>
                 <div class="dropdown-divider"></div>
-
+                <!--aici e dropdown-ul cu categorii-->
                 @foreach (var category in ViewBag.categories)
                 {
-                    <a class="dropdown-item" style="color: black;" href="/Article/Index/@category.id">@category.categoryName</a>
+                    <a class="dropdown-item" style="color: black;" href="/Article/Index/@category.categoryId">@category.categoryName</a>
                     <div class="dropdown-divider"></div>
                 }
             </div>
@@ -42,20 +42,22 @@
 <br />
 
 @foreach (var article in ViewBag.articles)
-{
+{ 
     <h1>@article.title</h1>
     <img src=@article.thumbnail width="100" style="float: left;" />
     <p>@article.description</p>
 
     <small>Data creare: @article.creationDate.ToString()</small>
     <br />
-    <small>Ultima actualizare: @article.latestUpdate.ToString()</small>
+    <small>Ultima actualizare: @article.latestEdit.ToString()</small>
+    <br />
+    <small> <b>Categorie:</b> @article.Category.categoryName </small>
     <br />
     <br />
-    <form method="post" action="/Article/Delete/@article.id">
+    <form method="post" action="/Article/Delete/@article.articleId">
         @Html.HttpMethodOverride(HttpVerbs.Delete)
-        <a class="btn btn-primary" href="/Article/Show/@article.id" role="button">Afisare articol</a>
-        <a class="btn btn-warning" href="/Article/Edit/@article.id" role="button">Editare articol</a>
+        <a class="btn btn-primary" href="/Article/Show/@article.articleId" role="button">Afisare articol</a>
+        <a class="btn btn-warning" href="/Article/Edit/@article.articleId" role="button">Editare articol</a>
         <button class="btn btn-danger" role="button" type="submit">Stergere articol</button>
     </form>
     <br />
