--- a/Kiwipedia2.0/Views/Article/NewPostMethod.cshtml
+++ b/Kiwipedia2.0/Views/Article/NewPostMethod.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "NewPostMethod";
+    ViewBag.Title = "Articolul a fost creat cu succes";
 }
 
-<h2>NewPostMethod</h2>
+<h2>Articolul a fost creat cu succes</h2>
+<p>Apasa <a href="/Article/Index">aici</a> pentru a te intoarce la pagina principala.</p>
 
