--- a/Kiwipedia2.0/Views/Shared/_Layout.cshtml
+++ b/Kiwipedia2.0/Views/Shared/_Layout.cshtml
@@ -16,15 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
-                <!-- @Html.ActionLink("Kiwipedia", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" }) -->
+                @Html.ActionLink("Kiwipedia", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/Home/Index" style="background-image: url(/Content/App_Resources/Images/KiwipediaLogo.png); text-indent: -9999px; display: block; width: 20%;"></a></li>
                     <li><a href="/Article/Index">Articole</a></li>
-                    <li><a href="/Home/Index" style="background-image: url(/Content/App_Resources/Images/Kiwipeda.jpg)"</li>
                     <li>@Html.ActionLink("Despre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
