--- a/Kiwipedia2.0/Views/Home/Index.cshtml
+++ b/Kiwipedia2.0/Views/Home/Index.cshtml
@@ -3,29 +3,33 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Bine ati venit!</h1>
+    <p class="lead">Kiwipedia este o encicopedie online gratuita. Devino astazi membru si adauga sau editeaza articole!</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Creaza un cont &raquo;</a></p>
 </div>
 
 <div class="row">
+    @foreach (var article in ViewBag.articles)
+    {
     <div class="col-md-4">
-        <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            <a class="btn btn-success" href="/Article/Index/@article.category.categoryName">@article.category.categoryName</a>
+            <h1>@article.articleVersion.title</h1>
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <br />
+        <img src=@article.articleVersion.thumbnail width="100" style="float: left;" />
+        <p>@article.articleVersion.description</p>
+
+        <small>Data creare: @article.article.creationDate.ToString()</small>
+        <br />
+        <small>Ultima actualizare: @article.articleVersion.creationDate.ToString()</small>
+        <br />
+        <br />
+        <form method="post" action="/Article/Delete/@article.article.id">
+            <a class="btn btn-primary" href="/Article/Show/@article.article.id" role="button">Afisare articol</a>
+        </form>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    }
 </div>
+
+    
