--- a/Kiwipedia2.0/Views/Article/DeleteMethod.cshtml
+++ b/Kiwipedia2.0/Views/Article/DeleteMethod.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "DeleteMethod";
+    ViewBag.Title = "Articolul a fost sters cu succes";
 }
 
 <h2>@ViewBag.Title</h2>
+<p>Apasa <a href="/Article/Index">aici</a> pentru a te intoarce la pagina principala.</p>
 
