--- a/Kiwipedia2.0/Views/Article/NewPostMethod.cshtml
+++ b/Kiwipedia2.0/Views/Article/NewPostMethod.cshtml
@@ -3,6 +3,6 @@
     ViewBag.Title = "Articolul a fost creat cu succes";
 }
 
-<h2>Articolul a fost creat cu succes</h2>
+<h2>@ViewBag.Title</h2>
 <p>Apasa <a href="/Article/Index">aici</a> pentru a te intoarce la pagina principala.</p>
 
